completed blogs main little pending

--- a/src/resources/css/color.css
+++ b/src/resources/css/color.css
@@ -6,258 +6,258 @@
 /* Color */
 a:hover,
 a {
-    color: #f50303;
+    color: #F20519;
 }
 
 .border-color {
-    border-color: #f50303;
+    border-color: #F20519;
 }
 
 .services-section-two .owl-dots .owl-dot:hover,
 .services-section-two .owl-dots .owl-dot.active{
-    background-color:#f50303;
+    background-color:#F20519;
 }
 
 .search-popup .search-form fieldset input[type="submit"],
 .preloader-close,
 .theme-bg {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .btn-style-one.style-four:hover:before {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .btn-style-one.style-four:hover:before {
-    background-color: #f50303;
+    background-color: #F20519;
     opacity: 1;
 }
 
 .cta-section-three h3 i {
-    color: #f50303;
+    color: #F20519;
 }
 
 .banner-section .link-box a.style-four:hover {
-    border-color: #f50303;
+    border-color: #F20519;
 }
 
 .scroll-to-top:hover {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .btn-style-one {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .btn-style-one.style-three {
-    color: #f50303;
+    color: #F20519;
 }
 
 .main-header .header-upper .contact-info .icon {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .main-menu .navigation>li.current>a {
-    color: #f50303;
+    color: #F20519;
 }
 
 .header-top .social-links li a:hover {
-    color: #f50303;
+    color: #F20519;
 }
 
 .estimate-form .dropdown-item.active,
 .estimate-form .dropdown-item:active {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .post-share-icon ul.social-links li a:hover {
-    color: #f50303;
+    color: #F20519;
 }
 
 .service-block-one .overlay:before {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .cta-section .wrapper-box {
-    border: 10px solid #f50303;
+    border: 10px solid #F20519;
 }
 
 .features-section .icon-box .icon {
-    color: #f50303;
+    color: #F20519;
 }
 
 .features-section .icon-box:hover .icon {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .filter-tabs li .count {
-    background: #f50303;
+    background: #F20519;
 }
 
 .gallery-block .overlay-content h5 {
-    color: #f50303;
+    color: #F20519;
 }
 
 .testimonials-section .owl-dots .owl-dot:hover,
 .testimonials-section .owl-dots .owl-dot.active{
-    background-color:#f50303;
+    background-color:#F20519;
 }
 
 .features-section-two.style-two .sec-title .sub-title {
-    color: #f50303;
+    color: #F20519;
 }
 
 .skills-section .lower-content {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .skills-section .progress-levels .progress-box .bar .bar-fill {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .news-block-one h4:hover {
-    color: #f50303;
+    color: #F20519;
 }
 
 .cta-section-two .wrapper-box {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .widget .widget-title:before {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .about-widget .social-links li a:hover {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .links-widget ul li a:hover {
-    color: #f50303;
+    color: #F20519;
 }
 
 .contact-widget .contact-info li .text a:hover {
-    color: #f50303;
+    color: #F20519;
 }
 
 .feature-block-three .read-more-btn i {
-    color: #f50303;
+    color: #F20519;
 }
 
 .service-block-two .overlay:before {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .process-block .icon .count {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .widget_categories_two .widget-content li:hover a,
 .widget_categories_two .widget-content li.current a {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .widget_contact-form .dropdown-item.active,
 .widget_contact-form .dropdown-item:active {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .services-details .content-side .icon-box .icon {
-    color: #f50303;
+    color: #F20519;
 }
 
 .services-details .content-side .icon-box:hover .icon {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .services-details .owl-dots .owl-dot:hover,
 .services-details .owl-dots .owl-dot.active{
-    background-color:#f50303;
+    background-color:#F20519;
 }
 
 .news-block-two .post-meta li.category {
-    color: #f50303;
+    color: #F20519;
 }
 
 .news-block-two h4:hover {
-    color: #f50303;
+    color: #F20519;
 }
 
 .news-block-three .post-meta li.category {
-    color: #f50303;
+    color: #F20519;
 }
 
 .news-block-three h2:hover {
-    color: #f50303;
+    color: #F20519;
 }
 
 .news-block-three .owl-theme .owl-nav .owl-prev:before {
-    color: #f50303;
+    color: #F20519;
 }
 
 .news-block-three .owl-theme .owl-nav .owl-next:before {
-    color: #f50303;
+    color: #F20519;
 }
 
 .news-block-three .video-box .video-btn:hover span {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .news-block-three .video-box .video-btn:before {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .widget_search input[type="search"] {
-    background: #f50303;
+    background: #F20519;
 }
 
-.categories-list li a:hover {color: #f50303;}
+.categories-list li a:hover {color: #F20519;}
 
 .widget_tag_cloud li a:hover {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .widget_cta .content {
-    background: #f50303;
+    background: #F20519;
 }
 
 .contact-form .dropdown-item.active,
 .contact-form .dropdown-item:active {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .contact-section .contact-info li .text a:hover {
-    color: #f50303;
+    color: #F20519;
 }
 
 .contact-section .social-links li a:hover {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .comments-title h4:before {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 .blog-single-post .list li:before {
-    color: #f50303;
+    color: #F20519;
 }
 
 .post-pagination li .current {
-    background-color: #f50303;
-    border-color: #f50303;
+    background-color: #F20519;
+    border-color: #F20519;
 }
 
 .mobile-menu .menu-backdrop {
-    background-color: #f50303;
+    background-color: #F20519;
 }
 
 /* Color Variation Two */
 
 .btn-style-one.style-two {
-    background-color: #ffdb31;
+    background-color: #F2C230;
 }
 
 .btn-style-one.style-three:before {
-    background-color: #ffdb31;
+    background-color: #F2C230;
 }
 
 .main-menu .contact-info .icon {
@@ -273,147 +273,147 @@ a {
 }
 
 .service-block-one h4:before {
-    background-color: #ffdb31;
+    background-color: #F2C230;
 }
 
 .filter-tabs li.active {
-    color: #ffdb31;
+    color: #F2C230;
 }
 
 .funfacts-section:before {
-    background-color: #ffdb31;
+    background-color: #F2C230;
 }
 
 .testimonials-section .owl-dots .owl-dot{
-    background:#ffdb31;
+    background:#F2C230;
 }
 
 .skills-section .lower-content.style-two {
-    background: #ffdb31;
+    background: #F2C230;
 }
 
 .news-block-one .post-meta li {
-    color: #f50303;
+    color: #F20519;
 }
 
 .news-block-one .post-meta li:before {
-    background-color: #ffdb31;
+    background-color: #F2C230;
 }
 
 .feature-block-three .read-more-btn {
-    color: #f50303;
+    color: #F20519;
 }
 
 .feature-block-three .overlay {
-    background-color: #ffdb31;
+    background-color: #F2C230;
 }
 
 .team-block-one .content:before {
-    background-color: #ffdb31;
+    background-color: #F2C230;
 }
 
 .team-block-one .social-links li a:hover{
-    color: #ffdb31;
+    color: #F2C230;
 }
 
 .team-block-two .content:before {
-    background-color: #ffdb31;
+    background-color: #F2C230;
 }
 
 .team-block-two .social-links li a:hover{
-    color: #ffdb31;
+    color: #F2C230;
 }
 
 .process-block .icon:before {
-    background-color: #ffdb31;
+    background-color: #F2C230;
 }
 
 .contact-widget.style-two .widget-content {
-    background: #ffdb31;
+    background: #F2C230;
 }
 
 .services-details .owl-dots .owl-dot{
-    background:#ffdb31;
+    background:#F2C230;
 }
 
 .news-block-two .date {
-    background-color: #ffdb31;
+    background-color: #F2C230;
 }
 
 .news-block-two .post-meta li {
-    color: #ffdb31;
+    color: #F2C230;
 }
 
 .news-block-two .post-meta li:before {
-    background-color: #ffdb31;
+    background-color: #F2C230;
 }
 
 .news-block-three .date {
-    background-color: #ffdb31;
+    background-color: #F2C230;
 }
 
 .news-block-three .post-meta li {
-    color: #ffdb31;
+    color: #F2C230;
 }
 
 .news-block-three .post-meta li:before {
-    background-color: #ffdb31;
+    background-color: #F2C230;
 }
 
 .news-block-three .owl-theme .owl-nav .owl-prev:hover:before {
-    background-color: #ffdb31;
+    background-color: #F2C230;
 }
 
 .news-block-three .owl-theme .owl-nav .owl-next:hover:before {
-    background-color: #ffdb31;
+    background-color: #F2C230;
 }
 
 .categories-list li a:before {
-    color: #ffdb31;
+    color: #F2C230;
 }
 
 .widget_popular_post .content .post-info {
-    color: #ffdb31;
+    color: #F2C230;
 }
 
 .contact-section .contact-info li .icon {
-    color: #ffdb31;
+    color: #F2C230;
 }
 
 .contact-section .social-links li a {
-    background: #ffdb31;
+    background: #F2C230;
 }
 
 .blog-single-post .post-share-info a:before {
-    color: #ffdb31;
+    color: #F2C230;
 }
 
 .blog-single-post.post-share-info span {
-    color: #ffdb31;
+    color: #F2C230;
 }
 
 .banner-section .banner-slider-button-prev:hover {
-    background: #f50303;
+    background: #F20519;
 }
 
 .banner-section .banner-slider-button-next:hover {
-    background: #f50303;
+    background: #F20519;
 }
 
 .main-menu .navigation>li>ul>li>a:hover {
-    color: #f50303;
+    color: #F20519;
 }
 
 .main-menu .navigation>li>ul>li>ul>lia:hover {
-    color: #f50303;
+    color: #F20519;
 }
 
 .search-popup .search-form fieldset input[type="submit"]:hover {
-    background: #ffdb31;
+    background: #F2C230;
 }
 
 .service-block-two .lower-content .read-more-btn a:hover {
-    color: #ffdb31;
+    color: #F2C230;
 }
 
 
