--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -404,7 +404,7 @@ img {
     text-align: center;
     z-index: 100;
     cursor: pointer;
-    background: #fcd82f;
+    background: #F2C230;
     border-radius: 50%;
     margin-left: -26px;
     display: none;
@@ -2644,7 +2644,7 @@ img {
     top: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(236, 90, 50, 0.9);
+    background-color: #f61d2bbd;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -2906,7 +2906,7 @@ img {
     right: 0;
     height: 100%;
     /* background-image: url(../images/shape/shape-2.jpg); */
-    background-color: #ffefa4a1;
+    background-color: #f2c23140;
 }
 
 .features-section-two .single-block {
@@ -3595,7 +3595,7 @@ img {
     right: 0;
     bottom: 0;
     /* background-image: url(../images/shape/shape-2.jpg); */
-    background-color: #ffefa4a1;
+    background-color: #f2c23140;
 }
 
 .features-section-three .auto-container {
@@ -3676,7 +3676,7 @@ img {
 }
 
 .feature-block-three .overlay .icon:before {
-    background-color: #d7be5252;
+    background-color: #f0da7a52;
     top: -45px;
 }
 
@@ -3803,7 +3803,7 @@ img {
     visibility: hidden;
     text-align: center;
     overflow: hidden;
-    background-color: rgba(236, 90, 49, 0.9);
+    background-color: #f61d2bbd;
     -webkit-transition: all 300ms ease;
     -moz-transition: all 300ms ease;
     -ms-transition: all 300ms ease;
@@ -4212,7 +4212,7 @@ img {
     height: 100%;
     max-height: 700px;
     /* background-image: url(../images/shape/shape-2.jpg); */
-    background-color: #ffefa4a1;
+    background-color: #f2c23140;
 }
 
 /* Style Two */
@@ -4360,7 +4360,7 @@ img {
 }
 
 .working-process.style-two .process-block .inner-box:hover .icon:before {
-    background-color: #ffdb31;
+    background-color: #F2C230;
 }
 
 /* Services Details */
@@ -5676,7 +5676,7 @@ img {
     position: relative;
     padding: 110px 0 60px;
     background-size: cover;
-    background-color: #ffefa4a1;
+    background-color: #f2c23140;
 }
 
 .two-column-section .auto-container {
@@ -5784,7 +5784,7 @@ img {
 .portfolio-section-two {
     position: relative;
     padding: 100px 0 0;
-    background-color: #ffefa4a1;
+    background-color: #f2c23140;
 }
 
 .portfolio-section-two .auto-container {
@@ -5836,7 +5836,7 @@ img {
     top: 32px;
     right: 32px;
     bottom: 32px;
-    background-color: rgba(236, 90, 50, 0.9);
+    background-color: #f61d2bbd;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
