--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -3433,15 +3433,16 @@ img {
 .contact-widget .contact-info li .icon {
     position: relative;
     color: #fff;
-    margin-right: 15px;
-    margin-top: 5px;
+    /* margin-right: 15px; */
+    /* margin-top: 5px; */
     font-size: 30px;
-    margin-top: 11px;
+    /* margin-top: 11px; */
 }
 
 .contact-widget .contact-info li .text {
     position: relative;
     color: #fff;
+    margin: 0;
 }
 
 .contact-widget .contact-info li .text a {
@@ -4511,8 +4512,7 @@ img {
 
 .contact-widget.style-two .widget-content {
     position: relative;
-    padding: 40px;
-    padding-bottom: 20px;
+    padding: 20px 15px;
 }
 
 .contact-widget.style-two .widget-content .widget-title {
