--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -4495,6 +4495,14 @@ img {
     border: 1px solid #eee;
 }
 
+.widget_contact-form .form-group textarea, .estimate-form .form-group textarea {
+    width: 100%;
+    background-color: #f9f9f9;
+    padding: 0 20px;
+    min-height: 84px;
+    border: 1px solid #eee;
+}
+
 .widget_contact-form .bootstrap-select>.dropdown-toggle {
     width: 100%;
     padding: 14px 20px;
