--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -5590,13 +5590,13 @@ img {
     padding-right: 5px;
 }
 
-.blog-single-post .post-share-info a:before {
+/* .blog-single-post .post-share-info a:before {
     position: absolute;
     content: ',';
     bottom: 0;
     right: 0;
     font-size: 16px;
-}
+} */
 
 .blog-single-post .post-share-info a:last-child:before {
     display: none;
