--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -4373,13 +4373,15 @@ img {
 }
 
 .working-process.style-two .process-block .icon:before {
-    background-color: #ffdb302b;
+    /* background-color: #ffdb302b; */
+    background-color: #F2C230;
     transform: scale3d(1, 1, 1);
     opacity: 1;
 }
 
 .working-process.style-two .process-block .inner-box:hover .icon:before {
-    background-color: #F2C230;
+    /* background-color: #F2C230; */
+    background-color: #f20819;
 }
 
 /* Services Details */
@@ -5978,7 +5980,7 @@ img {
         margin-bottom: 50px !important;
     }
     .services-section-two {
-        margin-bottom: 60px !important;
+        margin-bottom: 0px !important;
     }
     .cta-section .wrapper-box {
         padding: 25px 15px 25px !important;
@@ -6047,7 +6049,13 @@ img {
 
 .highlight-heading{
     padding: 10px;
-    background-color: rgb(252 240 210);
+    /* background-color: rgb(252 240 210); */
+    background-color: #f20819;
     border-left: 5px solid #f20819;
     display: inline-block;
+}
+
+.red-border-procedure{
+    padding: 20px;
+    border: 5px solid #f20819;
 }
