--- a/src/resources/css/campaign.css
+++ b/src/resources/css/campaign.css
@@ -1,7 +1,201 @@
+@import url('./fontawesome-all.css');
+@import url('./flaticon.css');
 @import url('./owl.css');
 @import url('../admin/css/image-previewer.css');
 @import url('./bootstrap.css');
 @import url('./iziToast.min.css');
+
+@font-face {
+    font-family: cerebri-light;
+    src: url(../fonts/CerebriSans-Light.ttf);
+  }
+
+  @font-face {
+    font-family: cerebri-regular;
+    src: url(../fonts/CerebriSans-Regular.ttf);
+  }
+
+  @font-face {
+    font-family: cerebri-medium;
+    src: url(../fonts/CerebriSans-Medium.ttf);
+  }
+
+  @font-face {
+    font-family: cerebri-semi-bold;
+    src: url(../fonts/CerebriSans-SemiBold.ttf);
+  }
+
+  @font-face {
+    font-family: cerebri-bold;
+    src: url(../fonts/CerebriSans-Bold.ttf);
+  }
+
+  @font-face {
+    font-family: cerebri-extra-bold;
+    src: url(../fonts/CerebriSans-ExtraBold.ttf);
+  }
+
+* {
+    margin: 0px;
+    padding: 0px;
+    border: none;
+    outline: none;
+    font-size: 100%;
+    line-height: inherit;
+}
+
+html{
+    scroll-behavior: smooth;
+    font-family: cerebri-regular;
+}
+
+ul,
+li {
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+}
+
+a:hover,
+a:focus,
+a:visited {
+    text-decoration: none !important;
+    outline: none;
+}
+
+
+/* Header Top */
+.header-top {
+    position: relative;
+    padding: 11px 0;
+    background-color: #232828;
+}
+
+.header-top .inner-container {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header-top .text {
+    color: #fff;
+    margin-bottom: 0;
+}
+
+.header-top .right-column {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header-top .social-links {
+    position: relative;
+}
+
+.header-top .social-links li {
+    display: inline-block;
+    margin-right: 18px;
+    font-size: 14px;
+}
+
+.header-top .social-links li:last-child {
+    margin-right: 0;
+}
+
+.header-top .social-links li a {
+    color: #fff;
+    transition: .5s;
+}
+
+.header-top .quote-btn {
+    position: relative;
+    padding: 0 25px;
+    margin-right: 30px;
+}
+
+.header-top .quote-btn:before {
+    position: absolute;
+    content: '';
+    left: 0;
+    top: 2px;
+    width: 1px;
+    height: 20px;
+    background-color: #fff;
+    opacity: .35;
+}
+
+.header-top .quote-btn:after {
+    position: absolute;
+    content: '';
+    right: 0;
+    top: 2px;
+    width: 1px;
+    height: 20px;
+    background-color: #fff;
+    opacity: .35;
+}
+
+.header-top .quote-btn a {
+    position: relative;
+    font-size: 16px;
+    color: #fff;
+}
+
+.header-top .quote-btn a i {
+    font-size: 18px;
+    margin-right: 8px;
+}
+
+/**/
+
+.header-top .contact-info {
+    position: relative;
+    /* margin-right: 25px; */
+}
+
+.header-top .contact-info li {
+    position: relative;
+    display: inline-block;
+    padding: 0 25px;
+}
+
+.header-top .contact-info li:before {
+    position: absolute;
+    content: '';
+    right: 0;
+    top: 2px;
+    width: 1px;
+    height: 20px;
+    /* background-color: #fff; */
+    opacity: .35;
+}
+
+.header-top .contact-info li:first{
+    padding-left: 0;
+}
+
+.header-top .contact-info a {
+    position: relative;
+    font-size: 14px;
+    color: #fff;
+}
+
+.header-top .contact-info a:hover{
+    text-decoration: none;
+}
+
+.header-top .contact-info a i {
+    font-size: 18px;
+    margin-right: 8px;
+}
+
+.header-top .social-links ul{
+    margin-bottom: 0;
+}
 
 .title {
     position: relative;
@@ -558,5 +752,237 @@ footer {
         bottom: 70px;
         width: 70%;
         right: 25px;
+    }
+}
+
+
+
+.main-footer {
+    position: relative;
+    padding-top: 40px;
+    background: #232828;
+}
+
+.main-footer .widgets-section {
+    position: relative;
+    /* padding-bottom: 30px; */
+}
+
+.main-footer .widget {
+    margin-bottom: 40px;
+}
+
+.main-footer .widget .widget-title {
+    color: #fff;
+    text-align: left;
+}
+
+/* Widget */
+.widget {
+    position: relative;
+    margin-bottom: 50px;
+}
+
+.widget .widget-title {
+    position: relative;
+    font-size: 20px;
+    text-transform: uppercase;
+    font-family: cerebri-bold;
+    color: #222;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+.widget .widget-title:before {
+    position: absolute;
+    content: '';
+    height: 2px;
+    width: 40px;
+    bottom: 0;
+    left: 0;
+}
+
+.about-widget .logo {
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.about-widget .logo img {
+    height: 220px;
+    object-fit: contain;
+}
+
+.about-widget .text {
+    position: relative;
+    font-family: cerebri-light;
+    color: #fff;
+    margin-bottom: 30px;
+}
+
+
+.about-widget .social-links {
+    position: relative;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.about-widget .social-links li {
+    position: relative;
+    margin-right: 5px;
+    margin-bottom: 10px;
+    display: inline-block;
+}
+
+.about-widget .social-links li a {
+    position: relative;
+    display: block;
+    color: #ffffff;
+    font-size: 14px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    background: #2a4241;
+    border-radius: 6px;
+    text-align: center;
+    border-radius: 6px;
+    -webkit-transition: all 300ms ease;
+    -o-transition: all 300ms ease;
+    transition: all 300ms ease;
+}
+
+.about-widget .social-links li a:hover {
+    color: #ffffff;
+}
+
+.about-widget .social-links li a:before {
+    position: absolute;
+    content: '';
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    -webkit-transform: scale(.7);
+    -ms-transform: scale(.7);
+    transform: scale(.7);
+    opacity: 0;
+    -webkit-transition: .5s;
+    -o-transition: .5s;
+    transition: .5s;
+}
+
+.about-widget .social-links li a:hover:before {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+}
+
+.about-widget .social-links li a span {
+    position: relative;
+}
+
+
+.links-widget ul li {
+    color: #fff;
+    font-family: cerebri-light;
+    margin-bottom: 10px;
+}
+
+.links-widget ul li a {
+    color: #fff;
+    transition: .5s;
+}
+
+.contact-widget .contact-info {
+    position: relative;
+}
+
+.contact-widget .contact-info li {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+}
+
+.contact-widget .contact-info li .icon {
+    position: relative;
+    color: #fff;
+    /* margin-right: 15px; */
+    /* margin-top: 5px; */
+    font-size: 30px;
+    /* margin-top: 11px; */
+}
+
+.contact-widget .contact-info li .text {
+    position: relative;
+    color: #fff;
+    margin: 0;
+}
+
+.contact-widget .contact-info li .text a {
+    color: #fff;
+    transition: .5s;
+}
+
+.footer-bottom {
+    text-align: center;
+    border-top: 1px solid #373d3d;
+}
+
+.footer-bottom .copyright {
+    position: relative;
+    color: #fff;
+    padding: 10px 0;
+}
+
+.footer-bottom .text {
+    position: relative;
+    margin-bottom: 0;
+}
+
+.gap-1{
+    gap: 10px;
+}
+
+.copyright .social-links a{
+    color: #f50903;
+}
+
+.widget-content{
+    text-align: left;
+}
+
+@media only screen and (min-width: 992px) {
+    .links-widget {
+        position: relative;
+        margin-left: 65px;
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    .header-top, .navbar, #contactForm{
+        display: none;
+    }
+    .about-section img{
+        margin-bottom: 20px;
+    }
+    .choose-section ul.steps-list{
+        flex-wrap: wrap;
+    }
+    .choose-section ul.steps-list li {
+        width: 100%;
+        margin-bottom: 20px;
+        padding-right: 0px;
+    }
+    ul.steps-list li:after {
+        border: none;
+    }
+    #contactModal .modal-header {
+        background-color: #272727;
+    }
+    .row {
+        margin: 0;
     }
 }
