--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -404,7 +404,7 @@ img {
     text-align: center;
     z-index: 100;
     cursor: pointer;
-    background: #F2C230;
+    background: #d2b800;
     border-radius: 50%;
     margin-left: -26px;
     display: none;
@@ -2920,7 +2920,7 @@ img {
     right: 0;
     height: 100%;
     /* background-image: url(../images/shape/shape-2.jpg); */
-    background-color: #f2c23140;
+    background-color: #d2b80078;
 }
 
 .features-section-two .single-block {
@@ -3610,7 +3610,7 @@ img {
     right: 0;
     bottom: 0;
     /* background-image: url(../images/shape/shape-2.jpg); */
-    background-color: #f2c23140;
+    background-color: #d2b80078;
 }
 
 .features-section-three .auto-container {
@@ -4227,7 +4227,7 @@ img {
     height: 100%;
     max-height: 700px;
     /* background-image: url(../images/shape/shape-2.jpg); */
-    background-color: #f2c23140;
+    background-color: #d2b80078;
 }
 
 /* Style Two */
@@ -4373,13 +4373,13 @@ img {
 
 .working-process.style-two .process-block .icon:before {
     /* background-color: #ffdb302b; */
-    background-color: #F2C230;
+    background-color: #d2b800;
     transform: scale3d(1, 1, 1);
     opacity: 1;
 }
 
 .working-process.style-two .process-block .inner-box:hover .icon:before {
-    /* background-color: #F2C230; */
+    /* background-color: #d2b800; */
     background-color: #f20819;
 }
 
@@ -5710,7 +5710,7 @@ img {
     position: relative;
     padding: 110px 0 60px;
     background-size: cover;
-    background-color: #f2c23140;
+    background-color: #d2b80078;
 }
 
 .two-column-section .auto-container {
@@ -5792,7 +5792,7 @@ img {
     background-size: cover;
     text-align: center;
     padding: 73px 0;
-    background-color: #f2c23140;
+    background-color: #d2b80078;
 
 }
 
@@ -5818,7 +5818,7 @@ img {
 .portfolio-section-two {
     position: relative;
     padding: 100px 0 0;
-    background-color: #f2c23140;
+    background-color: #d2b80078;
 }
 
 .portfolio-section-two .auto-container {
