--- a/src/resources/css/color.css
+++ b/src/resources/css/color.css
@@ -253,11 +253,11 @@ a {
 /* Color Variation Two */
 
 .btn-style-one.style-two {
-    background-color: #d2b800;
+    background-color: #f2c230;
 }
 
 .btn-style-one.style-three:before {
-    background-color: #d2b800;
+    background-color: #f2c230;
 }
 
 .main-menu .contact-info .icon {
@@ -273,23 +273,23 @@ a {
 }
 
 .service-block-one h4:before {
-    background-color: #d2b800;
+    background-color: #f2c230;
 }
 
 .filter-tabs li.active {
-    color: #d2b800;
+    color: #f2c230;
 }
 
 .funfacts-section:before {
-    background-color: #d2b800;
+    background-color: #f2c230;
 }
 
 .testimonials-section .owl-dots .owl-dot{
-    background:#d2b800;
+    background:#f2c230;
 }
 
 .skills-section .lower-content.style-two {
-    background: #d2b800;
+    background: #f2c230;
 }
 
 .news-block-one .post-meta li {
@@ -297,7 +297,7 @@ a {
 }
 
 .news-block-one .post-meta li:before {
-    background-color: #d2b800;
+    background-color: #f2c230;
 }
 
 .feature-block-three .read-more-btn {
@@ -305,91 +305,91 @@ a {
 }
 
 .feature-block-three .overlay {
-    background-color: #d2b800;
+    background-color: #f2c230;
 }
 
 .team-block-one .content:before {
-    background-color: #d2b800;
+    background-color: #f2c230;
 }
 
 .team-block-one .social-links li a:hover{
-    color: #d2b800;
+    color: #f2c230;
 }
 
 .team-block-two .content:before {
-    background-color: #d2b800;
+    background-color: #f2c230;
 }
 
 .team-block-two .social-links li a:hover{
-    color: #d2b800;
+    color: #f2c230;
 }
 
 .process-block .icon:before {
-    background-color: #d2b800;
+    background-color: #f2c230;
 }
 
 .contact-widget.style-two .widget-content {
-    background: #d2b800;
+    background: #f2c230;
 }
 
 .services-details .owl-dots .owl-dot{
-    background:#d2b800;
+    background:#f2c230;
 }
 
 .news-block-two .date {
-    background-color: #d2b800;
+    background-color: #f2c230;
 }
 
 .news-block-two .post-meta li {
-    color: #d2b800;
+    color: #f2c230;
 }
 
 .news-block-two .post-meta li:before {
-    background-color: #d2b800;
+    background-color: #f2c230;
 }
 
 .news-block-three .date {
-    background-color: #d2b800;
+    background-color: #f2c230;
 }
 
 .news-block-three .post-meta li {
-    color: #d2b800;
+    color: #f2c230;
 }
 
 .news-block-three .post-meta li:before {
-    background-color: #d2b800;
+    background-color: #f2c230;
 }
 
 .news-block-three .owl-theme .owl-nav .owl-prev:hover:before {
-    background-color: #d2b800;
+    background-color: #f2c230;
 }
 
 .news-block-three .owl-theme .owl-nav .owl-next:hover:before {
-    background-color: #d2b800;
+    background-color: #f2c230;
 }
 
 .categories-list li a:before {
-    color: #d2b800;
+    color: #f2c230;
 }
 
 .widget_popular_post .content .post-info {
-    color: #d2b800;
+    color: #f2c230;
 }
 
 .contact-section .contact-info li .icon {
-    color: #d2b800;
+    color: #f2c230;
 }
 
 .contact-section .social-links li a {
-    background: #d2b800;
+    background: #f2c230;
 }
 
 .blog-single-post .post-share-info a:before {
-    color: #d2b800;
+    color: #f2c230;
 }
 
 .blog-single-post.post-share-info span {
-    color: #d2b800;
+    color: #f2c230;
 }
 
 .banner-section .banner-slider-button-prev:hover {
@@ -409,11 +409,11 @@ a {
 }
 
 .search-popup .search-form fieldset input[type="submit"]:hover {
-    background: #d2b800;
+    background: #f2c230;
 }
 
 .service-block-two .lower-content .read-more-btn a:hover {
-    color: #d2b800;
+    color: #f2c230;
 }
 
 
